objects/Standard_UoM_Conversion__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Alternative_UOM_Text__c</fullName>
        <label>Alternative UOM Text</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternative_UOM__c</fullName>
        <label>Alternative UOM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_UOM_Text__c</fullName>
        <label>Base UOM Text</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_UOM__c</fullName>
        <label>Base UOM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Denominator__c</fullName>
        <label>Denominator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numerator__c</fullName>
        <label>Numerator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Standard UoM Conversion</label>
</CustomObject>